--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -8,3 +8,6 @@ img[src*='#center'] {
 	display: block;
 	margin: auto;
 }
+body {
+	font-family: helvetica neue,work sans,hiragino sans gb,sans-serif;
+}
